networking/security_groups.tf
# ALB Security Group
resource "aws_security_group" "alb" {
  name        = "${var.environment}-alb-sg"
  description = "Controls public traffic entering the Load Balancer"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.environment}-alb-sg"
    Environment = var.environment
    Project     = "ContainerizedWebPlatform"
    Terraform   = "true"
  }
}

# Compute Security Group
resource "aws_security_group" "compute" {
  name        = "${var.environment}-compute-sg"
  description = "Allows traffic strictly from the Load Balancer SG"
  vpc_id      = aws_vpc.main.id

  ingress {
    description     = "Allow web traffic from ALB SG only"
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.environment}-compute-sg"
    Environment = var.environment
    Project     = "ContainerizedWebPlatform"
    Terraform   = "true"
  }
}

# RDS Security Group
resource "aws_security_group" "rds" {
  name        = "${var.environment}-rds-sg"
  description = "Allows database connections strictly from the Compute SG"
  vpc_id      = aws_vpc.main.id

  ingress {
    description     = "Allow PostgreSQL from Compute SG only"
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.compute.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.environment}-rds-sg"
    Environment = var.environment
    Project     = "ContainerizedWebPlatform"
    Terraform   = "true"
  }
}
